# doh-client

./: .clippy.toml  .gitignore  .travis.yml  Cargo.toml  LICENSE  PKGBUILD  README.md  com.doh-client.daemon.plist  doh-client.service  doh-client.socket  usr.bin.doh-client  usr.local.bin.doh-client
.github/actions-rs/: grcov.yml
.github/workflows/: ci.yml  wix.yml
completions/: Cargo.toml  _doh-client  _doh-client.ps1  doh-client.bash  doh-client.elv  doh-client.fish
completions/src/: main.rs
package/linux/: PKGBUILD  doh-client  doh-client.service  usr.bin.doh-client
package/wix/: main.wxs
src/: cache.rs  config.rs  context.rs  dns.rs  error.rs  handler.rs  helper.rs  http2.rs  lib.rs  logger.rs  main.rs  main_completions.rs  main_windows_service.rs  run.rs  tests.rs
src/cmd/: app.rs  listen_config.rs  mod.rs  remote_host.rs
src/listen/: activation_socket.rs  config.rs  handler.rs  mod.rs
src/remote/: config.rs  connection.rs  helper.rs  host.rs  mod.rs  response.rs  session.rs
tests/: base64url.rs  cache.rs
