[package]
name = "doh-client"
version = "3.1.0"
edition = "2018"
authors = ["LinkTed <link.ted@mailbox.org>"] 
license = "BSD-3-Clause"
description = "DNS over HTTPS client"
readme = "README.md"
keywords = ["doh", "dns", "http2", "h2"]
include = [
    "src/**/*.rs",
    "tests/*.rs",
    "examples/*.rs", 
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    ]
repository = "https://github.com/LinkTed/doh-client"
categories = [
    "command-line-utilities",
    "network-programming"
    ]

[features]
default = ["socks5", "native-certs", "http-proxy"]
socks5 = ["tokio-socks"]
http-proxy = ["async-http-proxy"]
native-certs = ["rustls-native-certs"]
main-windows-service = ["windows-service", "winlog"]

[dependencies]
libc = "~0.2.106"
base64 = "~0.13.0"
log = "~0.4.14"
env_logger = "~0.9.0"
clap = "~2.33.3"
tokio-rustls = "~0.23.0"
futures = "~0.3.17"
h2 = "~0.3.7"
http = "~0.2.5"
rustls = "~0.20.0"
rustls-pemfile = "~0.2.1"
webpki = "~0.22.0"
bytes = "~1.1.0"
lru = "0.7.0"
dns-message-parser = "~0.6.0"
lazy_static = "~1.4.0"
thiserror = "~1.0.30"

[dependencies.async-http-proxy]
version = "~1.2.3"
optional = true
features = ["runtime-tokio", "basic-auth"]

[dependencies.tokio-socks]
version = "~0.5.1"
optional = true

[dependencies.tokio]
version = "~1.12.0"
features = ["rt-multi-thread", "net", "time", "macros"]

[dependencies.rustls-native-certs]
version = "~0.6.1"
optional = true

[dependencies.windows-service]
version = "~0.4.0"
optional = true

[dependencies.winlog]
version =  "~0.2.6"
optional = true

[[bin]]
name = "completions"
path = "src/main_completions.rs"

[[bin]]
name = "windows-service"
path = "src/main_windows_service.rs"
required-features = ["main-windows-service"]

[profile.release]
lto = true
codegen-units = 1
