[package]
name = "doh-client"
version = "3.1.2"
edition = "2021"
authors = ["LinkTed <link.ted@mailbox.org>"] 
license = "BSD-3-Clause"
description = "DNS over HTTPS client"
readme = "README.md"
keywords = ["doh", "dns", "http2", "h2"]
include = [
    "src/**/*.rs",
    "tests/*.rs",
    "package/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    ]
repository = "https://github.com/LinkTed/doh-client"
categories = [
    "command-line-utilities",
    "network-programming"
    ]

[features]
default = ["socks5", "native-certs", "http-proxy"]
socks5 = ["tokio-socks"]
http-proxy = ["async-http-proxy"]
native-certs = ["rustls-native-certs"]
main-windows-service = ["windows-service", "winlog"]

[dependencies]
libc = "~0.2.137"
base64 = "~0.13.1"
log = "~0.4.17"
env_logger = "~0.9.1"
tokio-rustls = "~0.23.4"
futures = "~0.3.25"
h2 = "~0.3.15"
http = "~0.2.8"
rustls = "~0.20.7"
rustls-pemfile = "~1.0.1"
webpki = "~0.22.0"
bytes = "~1.2.1"
lru = "~0.8.1"
dns-message-parser = "~0.7.0"
lazy_static = "~1.4.0"
thiserror = "~1.0.37"

[dependencies.clap]
version = "~3.2.23"
features = ["cargo"]

[dependencies.async-http-proxy]
version = "~1.2.5"
optional = true
features = ["runtime-tokio", "basic-auth"]

[dependencies.tokio-socks]
version = "~0.5.1"
optional = true

[dependencies.tokio]
version = "~1.20.2"
features = ["rt-multi-thread", "net", "time", "macros"]

[dependencies.rustls-native-certs]
version = "~0.6.2"
optional = true

[dependencies.windows-service]
version = "~0.5.0"
optional = true

[dependencies.winlog]
version =  "~0.2.6"
optional = true

[[bin]]
name = "windows-service"
path = "src/main_windows_service.rs"
required-features = ["main-windows-service"]

[profile.release]
lto = true
codegen-units = 1
