[package]
name = "doh-client"
version = "3.1.2"
edition = "2021"
authors = ["LinkTed <link.ted@mailbox.org>"] 
license = "BSD-3-Clause"
description = "DNS over HTTPS client"
readme = "README.md"
keywords = ["doh", "dns", "http2", "h2"]
include = [
    "src/**/*.rs",
    "tests/*.rs",
    "package/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    ]
repository = "https://github.com/LinkTed/doh-client"
categories = [
    "command-line-utilities",
    "network-programming"
    ]

[features]
default = ["socks5", "native-certs", "http-proxy"]
socks5 = ["tokio-socks"]
http-proxy = ["async-http-proxy"]
native-certs = ["rustls-native-certs"]
main-windows-service = ["windows-service", "winlog"]

[dependencies]
libc = "~0.2.175"
base64 = "~0.22.1"
log = "~0.4.27"
env_logger = "~0.11.8"
futures = "~0.3.31"
h2 = "~0.4.12"
http = "~1.3.1"
lru = "~0.16.0"
rustls = "~0.23.31"
rustls-pki-types = "~1.12.0"
rustls-pemfile = "~2.2.0"
tokio-rustls = "~0.26.2"
dns-message-parser = "~0.9.0"
bytes = "~1.10.1"
lazy_static = "~1.5.0"
thiserror = "~2.0.16"

[dependencies.clap]
version = "~4.5.46"
features = ["cargo"]

[dependencies.async-http-proxy]
version = "~1.2.5"
optional = true
features = ["runtime-tokio", "basic-auth"]

[dependencies.tokio-socks]
version = "~0.5.2"
optional = true

[dependencies.tokio]
version = "~1.47.1"
features = ["rt-multi-thread", "net", "time", "macros"]

[dependencies.rustls-native-certs]
version = "~0.8.1"
optional = true

[dependencies.windows-service]
version = "~0.8.0"
optional = true

[dependencies.winlog]
version =  "~0.2.6"
optional = true

[[bin]]
name = "windows-service"
path = "src/main_windows_service.rs"
required-features = ["main-windows-service"]

[profile.release]
lto = true
codegen-units = 1
